# brize_auth

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  index.html  justfile  user_schema.md
database/migrations/: 20231111163050_user_credentials.sql  20231111163137_user_sessions.sql
scripts/: init_db.sh  run_sql_db.sh  run_surreal_db.sh  run_with_db.sh  run_with_redis.sh  stop_db.sh  test.user_model.sh
scripts/tests/: all.test.sh  all_the_things.sh  everything.sh  test.everything.sh  test.redis_gateway.sh  test.session_model.sh  test.user_model.sh
scripts/tests/commands/: jwt.test.sh  password.test.sh
scripts/tests/gateways/: mysql_gateway.test.sh  redis_gateway.test.sh  surreal_gateway.test.sh
scripts/tests/modules/: auth.sh  auth.test.sh  commands.sh  commands.test.sh  entity.test.sh  gateway.sh  gateway.test.sh
src/: auth.rs  lib.rs  main.rs
src/application/: auth.rs  auth_client.rs  login_user.rs  mod.rs  register_user.rs  session.rs  session_client.rs  start_session.rs
src/application/auth/: auth.rs  auth_config.rs  mod.rs
src/application/command/: json_web_token.rs  jwt.rs  login_user.rs  mod.rs  password.rs  register_user.rs  start_session.rs
src/application/command/auth/: mod.rs
src/application/command/credentials/: mod.rs
src/application/command/session/: mod.rs
src/application/command/session_command/: destroy_session.rs  mod.rs  start_session.rs  validate_session.rs
src/application/command/token/: mod.rs
src/application/command/user/: mod.rs
src/application/interface/: auth_repository.rs  credentials.rs  gateway.rs  mod.rs  session.rs  session_repository.rs  user_repository.rs
src/application/repository/: credentials.rs  mod.rs  session_repository.rs
src/application/repository_interface/: credentials.rs  session.rs
src/auth/: auth_builder.rs  auth_client.rs  mod.rs  session_client.rs
src/auth/mysql/: mod.rs
src/auth/surreal/: mod.rs
src/domain/: mod.rs
src/domain/config/: auth.rs  database.rs  expiry.rs  gateway_type.rs  mod.rs  session_type.rs
src/domain/entity/: claim.rs  claims.rs  credentials.rs  expiry.rs  gateway.rs  mod.rs  session.rs  user.rs
src/domain/error/: mod.rs
src/entities/: session.rs  user.rs
src/examples/: mod.rs  planet_scale.rs  surreal_db.rs
src/helpers/: mod.rs  test_helpers.rs
src/infrastructure/: mod.rs
src/infrastructure/controller/: auth_controller.rs  mod.rs  session_controller.rs
src/infrastructure/database/: mod.rs  session_store.rs  user_store.rs
src/infrastructure/gateway/: mod.rs
src/infrastructure/repositories/: mod.rs  session_repository.rs  user_repository.rs
src/infrastructure/services/: jwt.rs  mod.rs  password_hash.rs
src/interface_adapters/: mod.rs
src/interface_adapters/repositories/: mod.rs  session_repository.rs  user_repository.rs
src/models/: session.rs  user.rs
src/use_cases/: login_user.rs  mod.rs  register_user.rs
(+15 files in other folders)
