[package]
name = "brize_auth"
version = "0.8.0"
edition = "2021"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "A tiny async authentication library."
license = "MIT/Apache-2.0"
repository = "https://github.com/xbrize/brize_auth"
readme = "README.md"
keywords = ["auth", "web"]
categories = ["authentication"]

[features]
default = ["mysql"]
redis = ["dep:redis"]
mysql = ["dep:sqlx"]
surreal = ["dep:surrealdb"]


[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.73"
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
jsonwebtoken = "8.3.0"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"], optional = true }
surrealdb = {version = "1.0.0", optional = true }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "tls-rustls"], optional = true }
