[package]
name = "brize_auth"
version = "0.9.0"
edition = "2021"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "A tiny async authentication library."
license = "MIT/Apache-2.0"
repository = "https://github.com/xbrize/brize_auth"
readme = "README.md"
keywords = ["auth", "web"]
categories = ["authentication"]

[features]
default = ["mysql", "sessions", "surreal"]
mysql = ["dep:sqlx"]
surreal = ["dep:surrealdb"]
sessions = ["dep:base64", "dep:rand"]


[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.73"
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
surrealdb = {version = "1.0.0", optional = true }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "tls-rustls"], optional = true }
base64 = {version = "0.21.5", optional = true}
rand = {version = "0.8.5", optional = true}
