[package]
name = "brize_auth"
version = "0.12.0"
edition = "2021"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "A tiny async authentication library."
license = "MIT/Apache-2.0"
repository = "https://github.com/xbrize/brize_auth"
readme = "README.md"
keywords = ["auth", "web"]
categories = ["authentication"]


[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
base64 = {version = "0.22.1"}
rand = {version = "0.9.0"}
sqlx = {version="0.8.3", features = ["runtime-tokio", "mysql", "tls-rustls"]}
trait-variant = "0.1.2"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
